fix collapse wont collapse, fix mobile view for detail nota

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -20,6 +20,14 @@ th {
   .fullHeight {
     height: 0%;
   }
+
+  .fs-xs-1 {
+    font-size: 1rem;
+  }
+
+  .fs-xs-2 {
+    font-size: 2rem;
+  }
 }
 
 /* import bootstrap to set changes */
